# fluent-state-machine

./: Cargo.toml  Readme.md
docs/: Documentation.md
examples/: cd_player.rs  cd_player_enum.rs  cd_player_str.rs  turnstile_enum.rs  turnstile_str.rs  turnstyle_enum.rs  turnstyle_str.rs
src/: errors.rs  lib.rs  main.rs
tests/: cd_player_enum_new_test.rs  cd_player_enum_test.rs  cd_player_str.rs  cd_player_str_test.rs  cd_player_test.rs  door_lock_enum.rs  door_lock_enum_tetst.rs  smart_light_enum.rs  soda_machine_enum.rs  soda_machine_enum_test.rs  state_machine_builder_test.rs  turnstile_enum_test.rs  turnstyle_enum_test.rs
