[package]
name = "state_machine_dsl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
#pretty_assertions = "1.3.0"                         # nicer looking assertions

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"

[profile.release]
opt-level = 'z' # Optimize for size
lto = true # Enable link-time optimization
codegen-units = 1 # Use a single codegen unit
panic = 'abort' # Abort on panic
strip = "symbols" # Strip debug symbols
