[package]
name = "fluent_state_machine"
version = "0.3.0"
edition = "2021"

authors = ["Hans Askov <hans@askov.dk>"] # The package authors
description = "A domain-specific language (DSL) for creating state machines in Rust" # A short description of the package
license = "MIT" # The license for the package
repository = "https://github.com/hansaskov1/state_machine_dsl" # The URL to the package's repository
keywords = ["state-machine", "dsl", "rust"] # Keywords that describe the package
readme = "Readme.md" # The file that contains the package's README
include = [
    "src/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]

[lints.rust]
unsafe_code = "forbid"


[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"

[profile.release]
opt-level = 'z' # Optimize for size
lto = true # Enable link-time optimization
codegen-units = 1 # Use a single codegen unit
panic = 'abort' # Abort on panic
strip = "symbols" # Strip debug symbols
